# FastApiDI

./: LICENSE  README.md  main.py  setup.cfg  setup.py
.github/workflows/: python-package.yml  tests.yml
FastApiDI/dependency_registry/: fastapi_dependency_registry.py  generic_dependency_registry.py
FastApiDI/factory_builders/: factory_builder.py
FastApiDI/factory_builders/abc/: factory_builder.py
examples/custom_factory_dependency/: app_factory.py  endpoints.py
examples/parameterized_callable_dependencies/: app_factory.py  deps.py  endpoints.py  main.py
examples/scoped_dependency_for_each_depends/: app_factory.py  endpoints.py
examples/scoped_dependency_for_each_request/: app_factory.py  endpoints.py
examples/singleton_dependency/: app_factory.py  endpoints.py
fastapi_di/dependency_registry/: fastapi_dependency_registry.py  generic_dependency_registry.py
fastapi_di/dependency_registry/abc/: dependency_registry.py
fastapi_di/factory_builders/: __init__.py  factory_builder.py
fastapi_di/factory_builders/abc/: __init__.py
fastapidi/dependency_registry/: __init__.py  fastapi_dependency_registry.py  generic_dependency_registry.py
fastapidi/dependency_registry/abc/: __init__.py
fastapidi/facades/: __init__.py  fastapidi_facade.py
fastapidi/factory_builders/: factory_builder.py
fastapidi/utils/: dependencies.py
tests/dependency_registry/: test_fastapi_dependency_registry.py  test_generic_dependency_registry.py
tests/facades/: test_fastapidi_facade.py
tests/factory_builders/: test_factory_builder.py
