[metadata]
name = FastApiDI
version = 0.1.1
description= Dependency Injection Utility for FastApi
author = Emil Ksenzovsky
author_email = e.ksenzovski@gmail.com

[options]
packages = find:
python_requires = >=3.6, <4

[options.packages.find]
include = fastapidi*

[options.extras_require]
test =
    pytest~=6.2
    coverage~=6.3;python_version>='3.7.0'
    coverage~=6.2.0;python_version~='3.6.0'
examples =
    fastapi~=0.7
all =
    FastApiDI[test]
    FastApiDI[examples]
