[metadata]
name = FastApiDI
version = 0.1.2
description = Dependency Injection Utility for FastApi
long_description = file: README.md
long_description_content_type = text/markdown
author = Emil Ksenzovsky
author_email = e.ksenzovski@gmail.com

[options]
packages = find:
python_requires = >=3.6, <4
install_requires =
    fastapi~=0.7

[options.packages.find]
include = fastapidi*

[options.extras_require]
test =
    pytest~=6.2
    coverage~=6.3;python_version>='3.7.0'
    coverage~=6.2.0;python_version~='3.6.0'
examples =
    uvicorn~=0.17;python_version>='3.7.0'
    uvicorn~=0.16.0;python_version~='3.6.0'
all =
    FastApiDI[test]
    FastApiDI[examples]
